--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="test"><h1>Dette er en testside for bruk av static files</h1></div>
+    <h1>Dette er en testside for bruk av static files</h1>
   </body>
 </html>
